fix spacing

--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -67,7 +67,7 @@
         from { stroke-dashoffset: 1000; }
         to { stroke-dashoffset: 0; }
     }
-    margin-top: -3rem;
+    margin-top: -1rem;
 }
 
 // ======================================================
